src/include/jme/jme.h

            int jme_jpl_orientation_state_order_naif( double jd0, double time_offset, int target_naif, int unit, int order, double *state, char *error );
            int jme_jpl_orientation_state_split_naif( double jd0, double time_offset, int target_naif, int unit, double *state, char *error );
            int jme_jpl_orientation_state_utc_naif( int year, int month, int day, int hour, int minute, double second, int calendar, int target_naif, int unit, double *state, char *error );
            int jme_jpl_position_record_count(char *error);
            int jme_jpl_position_record_index( int index, int *target, int *center, double *first_time, double *last_time, int *frame, int *segment_type, char *error );
            int jme_jpl_prefetch(char *error);
            int jme_jpl_rotational_angular_momentum_state_naif( double jd_time, int target_naif, int unit, double *state, char *error );
            int jme_jpl_rotational_angular_momentum_state_order_naif( double jd0, double time_offset, int target_naif, int unit, int order, double *state, char *error );
            int jme_jpl_rotational_angular_momentum_state_split_naif( double jd0, double time_offset, int target_naif, int unit, double *state, char *error );
            int jme_jpl_rotational_angular_momentum_state_utc_naif( int year, int month, int day, int hour, int minute, double second, int calendar, int target_naif, int unit, double *state, char *error );
            int jme_jpl_timescale(void);
            double jme_julian_day(int year, int month, int day, double hour, int calendar);
            int jme_lat_to_lmt(double jd_lat, double geo_lon, double *jd_lmt, char *error);
            int jme_lmt_to_lat(double jd_lmt, double geo_lon, double *jd_lat, char *error);
            int jme_lun_eclipse_how(double jd_ut, int flags, double *geopos, double *attr, char *error);