lib/src/jme_bindings.dart


  int jme_jpl_orientation_state_order_naif(
    double jd0,
    double time_offset,
    int target_naif,
    int unit,
    int order,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_orientation_state_order_naif(
      jd0,
      time_offset,
      target_naif,
      unit,
      order,
      state,
      error,
    );
  }

  late final _jme_jpl_orientation_state_order_naifPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_orientation_state_order_naif');
  late final _jme_jpl_orientation_state_order_naif =
      _jme_jpl_orientation_state_order_naifPtr.asFunction<
          int Function(double, double, int, int, int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_orientation_state_split_naif(
    double jd0,
    double time_offset,
    int target_naif,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_orientation_state_split_naif(
      jd0,
      time_offset,
      target_naif,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_orientation_state_split_naifPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_orientation_state_split_naif');
  late final _jme_jpl_orientation_state_split_naif =
      _jme_jpl_orientation_state_split_naifPtr.asFunction<
          int Function(double, double, int, int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_orientation_state_utc_naif(
    int year,
    int month,
    int day,
    int hour,
    int minute,
    double second,
    int calendar,
    int target_naif,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_orientation_state_utc_naif(
      year,
      month,
      day,
      hour,
      minute,
      second,
      calendar,
      target_naif,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_orientation_state_utc_naifPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_orientation_state_utc_naif');
  late final _jme_jpl_orientation_state_utc_naif =
      _jme_jpl_orientation_state_utc_naifPtr.asFunction<
          int Function(int, int, int, int, int, double, int, int, int,
              ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  int jme_jpl_position_record_count(
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_position_record_count(
      error,
    );
  }

  late final _jme_jpl_position_record_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'jme_jpl_position_record_count');
  late final _jme_jpl_position_record_count = _jme_jpl_position_record_countPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int jme_jpl_position_record_index(
    int index,
    ffi.Pointer<ffi.Int> target,
    ffi.Pointer<ffi.Int> center,
    ffi.Pointer<ffi.Double> first_time,
    ffi.Pointer<ffi.Double> last_time,
    ffi.Pointer<ffi.Int> frame,
    ffi.Pointer<ffi.Int> segment_type,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_position_record_index(
      index,
      target,
      center,
      first_time,
      last_time,
      frame,
      segment_type,
      error,
    );
  }

  late final _jme_jpl_position_record_indexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>)>>('jme_jpl_position_record_index');
  late final _jme_jpl_position_record_index =
      _jme_jpl_position_record_indexPtr.asFunction<
          int Function(
              int,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_prefetch(
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_prefetch(
      error,
    );
  }

  late final _jme_jpl_prefetchPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'jme_jpl_prefetch');
  late final _jme_jpl_prefetch =
      _jme_jpl_prefetchPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int jme_jpl_rotational_angular_momentum_state_naif(
    double jd_time,
    int target_naif,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_rotational_angular_momentum_state_naif(
      jd_time,
      target_naif,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_rotational_angular_momentum_state_naifPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Double, ffi.Int, ffi.Int,
                  ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>>(
      'jme_jpl_rotational_angular_momentum_state_naif');
  late final _jme_jpl_rotational_angular_momentum_state_naif =
      _jme_jpl_rotational_angular_momentum_state_naifPtr.asFunction<
          int Function(double, int, int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_rotational_angular_momentum_state_order_naif(
    double jd0,
    double time_offset,
    int target_naif,
    int unit,
    int order,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_rotational_angular_momentum_state_order_naif(
      jd0,
      time_offset,
      target_naif,
      unit,
      order,
      state,
      error,
    );
  }

  late final _jme_jpl_rotational_angular_momentum_state_order_naifPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Double, ffi.Double, ffi.Int, ffi.Int,
                  ffi.Int, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>>(
      'jme_jpl_rotational_angular_momentum_state_order_naif');
  late final _jme_jpl_rotational_angular_momentum_state_order_naif =
      _jme_jpl_rotational_angular_momentum_state_order_naifPtr.asFunction<
          int Function(double, double, int, int, int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_rotational_angular_momentum_state_split_naif(
    double jd0,
    double time_offset,
    int target_naif,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_rotational_angular_momentum_state_split_naif(
      jd0,
      time_offset,
      target_naif,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_rotational_angular_momentum_state_split_naifPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Double, ffi.Double, ffi.Int, ffi.Int,
                  ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>>(
      'jme_jpl_rotational_angular_momentum_state_split_naif');
  late final _jme_jpl_rotational_angular_momentum_state_split_naif =
      _jme_jpl_rotational_angular_momentum_state_split_naifPtr.asFunction<
          int Function(double, double, int, int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>();

  int jme_jpl_rotational_angular_momentum_state_utc_naif(
    int year,
    int month,
    int day,
    int hour,
    int minute,
    double second,
    int calendar,
    int target_naif,
    int unit,
    ffi.Pointer<ffi.Double> state,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_jpl_rotational_angular_momentum_state_utc_naif(
      year,
      month,
      day,
      hour,
      minute,
      second,
      calendar,
      target_naif,
      unit,
      state,
      error,
    );
  }

  late final _jme_jpl_rotational_angular_momentum_state_utc_naifPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  ffi.Int,
                  ffi.Int,
                  ffi.Int,
                  ffi.Int,
                  ffi.Int,
                  ffi.Double,
                  ffi.Int,
                  ffi.Int,
                  ffi.Int,
                  ffi.Pointer<ffi.Double>,
                  ffi.Pointer<ffi.Char>)>>(
      'jme_jpl_rotational_angular_momentum_state_utc_naif');
  late final _jme_jpl_rotational_angular_momentum_state_utc_naif =
      _jme_jpl_rotational_angular_momentum_state_utc_naifPtr.asFunction<
          int Function(int, int, int, int, int, double, int, int, int,
              ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  int jme_jpl_timescale() {
    return _jme_jpl_timescale();
  }

  late final _jme_jpl_timescalePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('jme_jpl_timescale');
  late final _jme_jpl_timescale =
      _jme_jpl_timescalePtr.asFunction<int Function()>();

  double jme_julian_day(
    int year,
    int month,
    int day,
    double hour,
    int calendar,
  ) {
    return _jme_julian_day(
      year,
      month,
      day,
      hour,
      calendar,
    );
  }

  late final _jme_julian_dayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(ffi.Int, ffi.Int, ffi.Int, ffi.Double,
              ffi.Int)>>('jme_julian_day');
  late final _jme_julian_day = _jme_julian_dayPtr
      .asFunction<double Function(int, int, int, double, int)>();

  int jme_lat_to_lmt(
    double jd_lat,
    double geo_lon,
    ffi.Pointer<ffi.Double> jd_lmt,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_lat_to_lmt(
      jd_lat,
      geo_lon,
      jd_lmt,
      error,
    );
  }

  late final _jme_lat_to_lmtPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Double, ffi.Double, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_lat_to_lmt');
  late final _jme_lat_to_lmt = _jme_lat_to_lmtPtr.asFunction<
      int Function(
          double, double, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  int jme_lmt_to_lat(
    double jd_lmt,
    double geo_lon,
    ffi.Pointer<ffi.Double> jd_lat,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_lmt_to_lat(
      jd_lmt,
      geo_lon,
      jd_lat,
      error,
    );
  }

  late final _jme_lmt_to_latPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Double, ffi.Double, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_lmt_to_lat');
  late final _jme_lmt_to_lat = _jme_lmt_to_latPtr.asFunction<
      int Function(
          double, double, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  int jme_lun_eclipse_how(
    double jd_ut,
    int flags,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> attr,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_lun_eclipse_how(
      jd_ut,
      flags,
      geopos,
      attr,
      error,
    );
  }
